--- a/index.html
+++ b/index.html
@@ -7,29 +7,63 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
 <header>
   <h1>Tic-Tac-Toe</h1>
 </header>
 
   <div class="main">
+
     <div class="players">
-      <div class="player-x">
-        Player One
+        <p class="player" id="X">Player X</p>
+        <p class="player" id="O">Player O</p>
       </div>
-      <div class="player-o">
-        Player Two
-      </div>
-    </div>
 
     <div class="game-board">
+      <div class="outcome-display">
+        Person Wins!
+      </div>
+      <div id="settings" class="settings">
+            <div class="against-friend">Play against a friend</div><br>
+            <div class="against-ai">Play against a AI</div><br>
+    
+            <div class="mode-settings-friends">
+                <p class="mode">Players</p>
+                <input type="text" id="human-player-x" name="player-x" placeholder="Player X" maxlength="15">
+                <br>
+                <input type="text" id="human-player-o" name="player-o" placeholder="Player O" maxlength="15">
+            </div>
+    
+            <div class="ai-mode">
+                <p class="mode">Players</p>
+                    <input class="ai-mode-input ai-x" type="text" name="player-x" placeholder="Player X" maxlength="15">
+                    <i class="fas fa-robot hidden"></i>
+                <br>
+                    <input class="ai-mode-input ai-o" type="text" name="player-o" placeholder="AI" maxlength="15">
+                    <i class="fas fa-robot"></i>
+            </div>
+            <div class="button-container">
+                <button type="reset" class="settings-btn" id="cancel">Cancel</button>
+                <button type="submit" class="settings-btn" id="save">Save</button>
+            </div>
+        </form>
+    </div>
+
+    <div class="board-squares">
+
+    </div>
+  
     </div>
 
      <div class="controls">
+      <div class="game-start">
+        Start
+      </div>
        <div class="reset-game">
-        reset
+        Reset
        </div>
        <div class="game-settings">
-        settings
+         Settings
        </div>
      </div>
 
