--- a/index.html
+++ b/index.html
@@ -15,27 +15,26 @@
   <div class="main">
 
     <div class="players">
-        <p class="player" id="X">Player X</p>
-        <p class="player" id="O">Player O</p>
+        <p id="player-x-name" class="player-x-name">Player X</p>
+        <p id="player-o-name" class="player-x-name">Player O</p>
       </div>
 
     <div class="game-board">
-      <div class="outcome-display">
-        Person Wins!
-      </div>
-      <div id="settings" class="settings">
+      <div class="outcome-display"></div>
+
+      <div id="game-settings" class="game-settings-none">
             <div class="against-friend">Play against a friend</div><br>
             <div class="against-ai">Play against a AI</div><br>
     
-            <div class="mode-settings-friends">
-                <p class="mode">Players</p>
+            <div class="friends-mode">
+                <p class="mode-players">Players</p>
                 <input type="text" id="human-player-x" name="player-x" placeholder="Player X" maxlength="15">
                 <br>
                 <input type="text" id="human-player-o" name="player-o" placeholder="Player O" maxlength="15">
             </div>
     
             <div class="ai-mode">
-                <p class="mode">Players</p>
+                <p class="mode-players">Players</p>
                     <input class="ai-mode-input ai-x" type="text" name="player-x" placeholder="Player X" maxlength="15">
                     <i class="fas fa-robot hidden"></i>
                 <br>
@@ -43,26 +42,24 @@
                     <i class="fas fa-robot"></i>
             </div>
             <div class="button-container">
-                <button type="reset" class="settings-btn" id="cancel">Cancel</button>
-                <button type="submit" class="settings-btn" id="save">Save</button>
+                <button type="reset" class="settings-btn" id="cancel-button">Cancel</button>
+                <button type="submit" class="settings-btn" id="save-button">Save</button>
             </div>
         </form>
     </div>
 
-    <div class="board-squares">
-
-    </div>
+    <div class="board-squares"></div>
   
     </div>
 
      <div class="controls">
-      <div class="game-start">
+      <div class="start-game">
         Start
       </div>
        <div class="reset-game">
         Reset
        </div>
-       <div class="game-settings">
+       <div class="settings">
          Settings
        </div>
      </div>
